test/fixtures/source-map/output/source_map_throw_set_immediate.snapshot
*/test/fixtures/source-map/uglify-throw-original.js:5
  throw Error('goodbye');
  ^


Error: goodbye
    at Hello (*/test/fixtures/source-map/uglify-throw-original.js:5:9)
    at Immediate.<anonymous> (*/test/fixtures/source-map/uglify-throw-original.js:9:3)
    *

Node.js *
